Updated index file with footer.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,17 @@
      
         <hr>
     </section>
-
+    <footer>
+        <div class="footer-content">
+            <h2>TECH-LAB</h2>
+            <p>Contact us for more information about our services.</p>
+            <p>Phone: +1 234 567 890</p>
+            <p>Email: info@techlab.com</p>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 TECH-LAB. All rights reserved.</p>
+        </div>
+    </footer>
     <script>
         AOS.init();
     </script>
