Corrected linkage in styles and html file.

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 <h2>WEB-DEVELOPMENT</h2>
                 <p> At Tech Lab, we specialize in high-performance mobile app development, offering customized solutions for various devices, including wearables, augmented reality gadgets, and smartphones. Whether creating a new app or adapting an existing one, we provide cross-platform and native development services tailored to your needs. Our team leverages the latest technologies to build innovative, scalable apps that deliver seamless user experiences and drive business growth.</p>
             </div>
-            <div class="image-block"><img src="asset/webdev.jpg" alt="WEB-DEVELOPMENT"></div>
+            <div class="image-block"><img src="assets/webdev.jpg" alt="WEB-DEVELOPMENT"></div>
         </div>
 
         <hr>
 
         <div class="flex-container-services" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
-            <div class="image-block"><img src="asset/appdevelop.png" alt="APP-DEVELOPMENT" ></div>
+            <div class="image-block"><img src="assets/appdevelop.png" alt="APP-DEVELOPMENT" ></div>
             <div>
                 <h2>APP DEVELOPMENT</h2>
                 <p>At Creative-Mind, we deliver high-performance mobile apps, specializing in custom solutions for wearables, IoT, AR gadgets, and smartphones.  Whether creating new apps or adapting existing ones, we provide top-notch cross-platform and native development services. Our expert team leverages the latest technologies to build scalable apps that ensure seamless user experiences and drive business growth.</p>
@@ -68,7 +68,7 @@
                 <h2>CLOUD COMPUTING</h2>
                 <p>Creative-Mind, we specialize in delivering innovative cloud computing solutions tailored for business success. Our services include cloud infrastructure design, migration, and management, ensuring high availability and security. We leverage the latest technologies to optimize performance and reduce costs. Empower your organization with seamless collaboration and enhanced scalability.</p>
             </div>
-            <div class="image-block"><img src="asset/cloud.jpg" alt="CLOUD COMPUTING" style="width:1200px;height:350px;"></div>
+            <div class="image-block"><img src="assets/cloud.jpg" alt="CLOUD COMPUTING" style="width:1200px;height:350px;"></div>
         </div>
     </section>
 
@@ -81,7 +81,7 @@
 
         <div class="flex-container">
             <div>
-                <h2 style="color= black;">Team</h2>
+                <h2 style="color:black;">Team</h2>
                 <h4 style="text-align:center; color:black;">OUR TEAM, OUR VALUE, OUR STRUCTURE</h4>
                 <p style="padding-top: 10px; color:black;">
                     We recruit well-educated, flexible, and ambitious people who thrive on change and challenge, are innovative, self-confident, and accept responsibility by taking initiative and adapting to a stimulating international working environment. We seek leadership traits, excellent communication skills, strong academic performance, and relevant professional experience. Each team member is handpicked from a batch of top universities from around the globe. Each member of our team goes through a three-tier interview process, which not only tests their technical skills but how well they communicate and express themselves. This is because, over the years, we have learned that good communication is the key to success. We have complete teams including Project Managers, Back End Engineers, Front End Engineers, Quality Assurance Engineers, Network Administrators, Data Engineers, and Mobile Engineers. Every team works directly under the supervision of the Tech Leads and along with our Chief Technology Officer. The client has direct access to the assigned project manager and the engineer working on their product as well as direct access to the CTO of the company at all times. Our employees are also engaged in continuous learning and professional growth in a dynamic corporate environment through attending seminars of relevant technologies and regularly doing training on new and upcoming technologies. Thus, making sure we get the perfect team for your requirement.
@@ -120,20 +120,20 @@
 
         <div class="flex-container3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
             <div>
-                <img src="asset/person2.jfif" alt="person1" style="border-radius: 50% ;height: 250px;width:250px;" >
+                <img src="assets/person2.jfif" alt="person1" style="border-radius: 50% ;height: 250px;width:250px;" >
                 <P><b>HR<br>Asfandyar Khan</b></P>
             </div>
 
             <div>
-                <img src="asset/person1.jfif" alt="person3" style="border-radius: 50% ;height: 250px;width:250px;" >
+                <img src="assets/person1.jfif" alt="person3" style="border-radius: 50% ;height: 250px;width:250px;" >
                 <P><b>Senior Project Manager<br>Hasaan Rana</b></P>
             </div>
             <div>
-                <img src="asset/person3.png"alt="person2" style="border-radius: 50% ;height: 250px;width:250px;" >
+                <img src="assets/person3.png" alt="person2" style="border-radius: 50% ;height: 250px;width:250px;" >
                 <P><b>Senior Web Developer<br>Zainab Naveed</b></P>
             </div>
             <div>
-                <img src="asset/person4.jpg" alt="person4" style="border-radius: 50% ;height: 250px;width:250px;" >
+                <img src="assets/person4.jpg" alt="person4" style="border-radius: 50% ;height: 250px;width:250px;" >
                 <P><b>Management Head<br>Zoya khan</b></P>
             </div>
         </div>
@@ -156,6 +156,6 @@
     <script>
         AOS.init();
     </script>
-    <script src="script.js"></script> <!-- Link to the new JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
